trying to fix font on mobile device

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,14 +1,14 @@
 
 @font-face {
   font-family: 'Wasted-Regular';
-  src: url('Wasted-Regular.eot') format('embedded-opentype');
+  src: url('../fonts/Wasted-Regular.eot?') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Wasted-Regular';
-  src:  url('Wasted-Regular.otf')  format('opentype'),
+  src:  url('../fonts/Wasted-Regular.otf')  format('opentype'),
 	     url(data:application/x-font-woff;charset=utf-8;base64,d09GRgABAAAAAErIAA8AAAAAnUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABGRlRNAABKrAAAABoA
 AAAcau35i0dERUYAAEWUAAAAHgAAACAA0QAFR1BPUwAARdQAAATXAAAJ+GSriStHU1VCAABFtAAA
 ACAAAAAgRHZMdU9TLzIAAAHMAAAASwAAAGBnxIc6Y21hcAAAA9wAAAGnAAACOo75QIlnYXNwAABF
@@ -344,7 +344,7 @@ W0FFPFgAdRH7/ls9Pe3qDfzN8+xkWXPXTXb74HDamejOgh/x07ed4Zp7qYmfDfxsMEmaTA7t7y9w
 78b02xXV+4CkF7lPK5Ha0JWUsbdwtIcejqvtDGZh0KO6Pwsma765C3SP9pn+zJjZ3pk1OluFrpl4
 YO9KPRPH+NWTYbbrdjqwzDX8SXK3vMD/KS/JK/Cd5/5IygW5SO+9JW+bOisxt77ibxQrf5Pwf6ML
 2LQmV+Vj+VzW5Xv5mQlzirOnWE+zBllnWM+wUtxUAkr36VBEwuvSPWP+l9I7rtkLJZ22VIB46hGI
-8a7T4TZCqNfBcuAa0Dr/AgrlsvoAeNpjYGBgZACCY6nbT4HoSy4KD2A0AEyMBtoAAA==) format('woff'), url('Wasted-Regular.ttf')  format('truetype'), url('Wasted-Regular.svg#Wasted-Regular') format('svg');
+8a7T4TZCqNfBcuAa0Dr/AgrlsvoAeNpjYGBgZACCY6nbT4HoSy4KD2A0AEyMBtoAAA==) format('woff'), url('../fonts/Wasted-Regular.ttf')  format('truetype'), url('../fonts/Wasted-Regular.svg#Wasted-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -355,7 +355,7 @@ YO9KPRPH+NWTYbbrdjqwzDX8SXK3vMD/KS/JK/Cd5/5IygW5SO+9JW+bOisxt77ibxQrf5Pwf6ML
 
 @font-face {
   font-family: 'SpecialElite-Regular';
-  src: url('SpecialElite-Regular.eot') format('embedded-opentype');
+  src: url('../fonts/SpecialElite-Regular.eot?') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
@@ -1949,7 +1949,7 @@ YEa1xFii8jSqKII4U4bHjVVp6n7oK/il3dbcG0QjnUVbhDEHcbVO3Nsi7wG/jOmaLrKqz2KFUTzW
 fItHvOAdX9qNbcb4NmPaKEZaUcs844MnwhYiDB2M8TavY8QQr/+wM3ZeSjCjM4yYEtqcwyzjJcwl
 u55lArW1hN/F4RzvJIyL9TmmqvuqszJ5pWemnuORvQgvG5lOfMh4LnfnYos12tjDES44LdlBHqfM
 U+dNfEgv2DJWGaNC5bGyNk5iVfSuqQ9jPIzxkLjELHBqNuq6IbmFepOuHM6kioCvaXVy8tIN0aii
-c8nBl3j++wcsl0CdAA==) format('woff'), url('SpecialElite-Regular.ttf')  format('truetype'), url('SpecialElite-Regular.svg#SpecialElite-Regular') format('svg');
+c8nBl3j++wcsl0CdAA==) format('woff'), url('../fonts/SpecialElite-Regular.ttf')  format('truetype'), url('../fonts/SpecialElite-Regular.svg#SpecialElite-Regular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -2104,6 +2104,10 @@ h1 {
 	display: inline;
 	height: 50px;
 	box-shadow: 2px 2px 4px #000000;
+}
+
+#mainBio span {
+	background-color: #323030;
 }
 
 #maxBio span {
